# reference-objects

./: .gitignore  README.md  js_manifest.json  local_manifest.json  python_manifest.json
anxiety-questionaire/: questions.json
bmi-calc-ko/: README.md  metadata.json  service_deps.ts
bmi-calc-ko/org_kgrid_python_activator/: pyproject.toml
bmi-ko-1.1.0-javascript/: README.MD  metadata.json  service.yaml
bmi-ko-1.1.0-python/: README.md  metadata.json  pyproject.toml
bmi-ko-1.1.1-javascript/: README.MD  metadata.json
bmi-ko-1.1.1-python/: metadata.json
bmi-ko-1.1.2-javascript/: README.MD  metadata.json
bmi-ko-1.1.2-python/: metadata.json
bmi-ko-1.2.0/: metadata.json  service.yaml
bmi-ko-1.2.1/: metadata.json
bmi-ko-1.2.2/: README.MD  metadata.json
bmi-ko-2.1.1/: README.MD  metadata.json
bmi-ko-2.1.2/: README.MD  metadata.json
bmi-ko-2.2.2/: README.MD  metadata.json
bmi-ko-combined-javascript/: metadata.json
bmi-ko-combined-knowledge-javascript/: README.MD  metadata.json
bmi-ko-multi-impl-1/: README.MD  metadata.json  service.yaml
bmi-ko-multi-impl-2/: README.MD  metadata.json
bmi-ko-multi-service-1/: README.MD  metadata.json
bmi-ko-multi-service-2/: README.MD  metadata.json
bmi-ko-multi-service-multi-impl/: README.MD  metadata.json
bmi-ko-remote-service/: README.MD
bmi-ko-seperate-javascript/: README.MD
bmi-ko-seperate-knowledge-javascript/: README.MD  metadata.json
bmi-ko-seperate-knowledge-python/: README.MD  metadata.json
bmi-ko-seperate-python/: README.MD
bmi-ko-simple-javascript/: README.md  http_service.ts  ko_test.ts  metadata.json  service.yaml
bmi-ko-simple-python/: README.md  metadata.json  pyproject.toml  service.yaml
bmi-ko-with-one-service-multiple-implementations/bmi-calculator-service/: pyproject.toml
bmi-ko-with-one-service-multiple-implementations/bmi-calculator-service/implementation_a/: deployment.yaml  pyproject.toml
bmi-ko-with-one-service-multiple-implementations/bmi-calculator-service/implementation_b/: http_service.ts
bmi_ko_simple_python/: README.md  pyproject.toml  service.yaml
misc_kos/hello-world-ko/python-activator/hello-world/: package-lock.json  pyproject.toml
misc_kos/python-io-v1-0/: deployment.yaml  metadata.json  pyproject.toml
misc_kos/python-io-v1-0/python_io_v1_0/: io.py
python/python-input-v1-0/: deployment.yaml  pyproject.toml  service.yaml
(+191 files in other folders)
