[tool.poetry]
name = "bmi_ko_simple_python"
version = "0.1.0"
description = "A BMI calculator plugin for kgrid python activator"
authors = ["anurag-bangera <97190957+anurag-bangera@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
